--- a/index.html
+++ b/index.html
@@ -3,19 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой сайт</title>
+    <title>Школьный сайт</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Добро пожаловать на мой сайт!</h1>
+        <h1>Добро пожаловать в нашу школу!</h1>
     </header>
     <main>
-        <p>Привет! Это мой первый сайт на GitHub Pages.</p>
-        <p>Стили подключены через внешний файл <code>style.css</code>.</p>
+        <section class="section">
+            <h2>Расписание уроков</h2>
+            <p>Здесь будет информация о расписании.</p>
+        </section>
+        <section class="section">
+            <h2>Новости школы</h2>
+            <p>Последние событи и новости можно узнать здесь.</p>
+        </section>
     </main>
     <footer>
-        <p>© 2025 Ваше Имя. Все права защищены.</p>
+        <p>© 2025 Школа №123. Все права защищены.</p>
     </footer>
 </body>
 </html>
