--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Школьный сайт</title>
+    <title>Завод Zidu! </title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Добро пожаловать в нашу школу!</h1>
+        <h1>Добро пожаловать в наш завод, вы можете зарегаться к нам</h1>
     </header>
     <main>
         <section class="section">
-            <h2>Расписание уроков</h2>
-            <p>Здесь будет информация о расписании.</p>
+            <h2>Расписание заиплат ; нет, умрите </h2>
+            <p>Здесь будет информация о понижерии премий.</p>
         </section>
         <section class="section">
             <h2>Новости школы</h2>
